[metadata]
name = impy
version = 0.1.4
description = An image and file handling CLI. Can resize and convert many image types supported by PIL. Also supports PDF merging.
license='Expat/MIT'
[options]
packages= my_cli

install_requires =
    importlib; python_version >="3.2"
    click >= 8.00
    Pillow >= 9.0.0
    PyPDF2 >= 2.10.15
    typing_extensions >= 4.3.0


[options.entry_points]
console_scripts =
    impy = my_cli.cli_t:impy


